# jarvis-orchestrator

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  budget_ledger.json  docker-compose.local.yaml  docker-compose.yaml  flow-install.lock.json  package-lock.json  program.md  pyproject.toml  requirements.txt  test_sn6.py
.agents/skills/jarvis-qa-review/: SKILL.md
.agents/skills/jarvis-test-runner/: SKILL.md
.circleci/: config.yml
.github/workflows/: autoflow.yml  tests.yml
.jarvis/context/: AGENTS.md  README.md  local.md.example  roadmap.md  status.md  team.md  technical-debt.md
.jarvis/context/scopes/: _scopes.yaml
cli/: README.md  __init__.py  __main__.py  jarvis_miner.py  main.py  original.py
deploy/: jarvis.mainnet.env  jarvis.testnet.env  monitor.mainnet.yaml
docs/: ENGINEERING_GATES.md  JARVIS_MAINNET_READINESS.md  JARVIS_SN13_EXECUTIVE_READINESS.md  RUN_SN13_LOCALLY.md  WORKSTREAM_ARCHITECTURE.md  WORKSTREAM_TESTER_HANDOFF.md  jarvis_miner_tool_contract.docx  running_on_testnet.md
docs/bittensor-basics/: CLI_INSTALLATION.md  JARVIS_ORCHESTRATOR_ARCHITECTURE.md  SN13_COMPLETE_GUIDE.md  SN13_IMPLEMENTATION.md
docs/bittensor-basics/sn13_miner/: requirements.txt
docs/skills/flow-workstream/: SKILL.md
docs/skills/jarvis-workstream/: SKILL.md
jarvis_miner/: __init__.py  alerter.py  cli.py  config.py  deregister.py  models.py  monitor.py
jarvis_miner/config/: config.test.yaml  config.yaml
miner_tools/: README.md  __init__.py  cli.py  config.py  deregister.py  fetcher.py  models.py  monitor.py
miner_tools/config/: config.test.yaml  config.yaml
miner_tools/subnets/13/: agents.py
scripts/: generate_workstream_operator_credentials.py  run_sn13_listener.sh  run_sn13_scheduler.sh  validate_external_skills.py
scripts/flow/: cleanup-stale-plugins.mjs  register-claude-skills.mjs  register-skills.mjs  sync-rules.mjs  validate-skills.mjs  verify-harness.mjs
scripts/registration/: automated-registration.mjs  deregistration-monitor.mjs  registration-price-monitor.mjs
subnets/sn13/: README.md  api_adapter.py  decomposition.py  desirability.py  economics.py  export.py  gravity.py  intake.py  models.py  monitor.py  planner.py  policy.py  publication.py  quality.py  readiness.py  simulator.py  storage.py  tasks.py  workstream.py
subnets/sn13/config/: minimum_requirements.yaml
subnets/sn13/docs/: ARCHITECTURE.md  DATA_VALUE_AND_INCENTIVES.md  ECONOMICS.md  GLOSSARY.md  (+6 more)
subnets/sn6/: README.md  connection.py  logic.py  miner.py
template/: mock.py
template/base/: neuron.py
test_agents/: test_agent.py
tests/: conftest.py  test_alerter.py  test_cli.py  test_config.py  test_engineering_governance.py  test_fetcher.py  test_models.py  test_monitor.py  test_sn13_contract.py  test_sn13_decomposition.py  test_sn13_desirability.py  test_sn13_economics.py  test_sn13_export.py  test_sn13_gravity.py  test_sn13_listener_runtime.py  test_sn13_planner.py  test_sn13_policy.py  test_sn13_protocol_adapter.py  test_sn13_protocol_observer.py  test_sn13_publication.py  test_sn13_quality.py  test_sn13_readiness.py  test_sn13_simulator.py  test_sn13_storage.py  test_sn13_tasks.py  test_sn13_testcontainers.py  test_sn13_workstream.py  test_sn13_workstream_api.py  test_workstream.py  test_workstream_api.py
tests/sn13/: query_simulator.py  sn13_query_guide.py
workstream/: __init__.py  models.py  ports.py  sqlite_store.py  stats.py  store.py
workstream/api/: __init__.py  app.py  auth.py  runtime.py  settings.py
(+44 files in other folders)
