[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis-miner"
version = "1.0.0"
description = "Jarvis Miner Service — Registration Price Monitor"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "bittensor>=10.2.0",
]

[project.optional-dependencies]
bittensor = ["bittensor>=7.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff",
    "mypy",
]

[project.scripts]
jarvis-miner = "miner_tools.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["cli", "miner_tools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]