[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis-miner"
version = "1.0.0"
description = "Jarvis Orchestrator — Multi-subnet miner management for Bittensor"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "fastapi>=0.135",
    "rich>=13.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "pyarrow>=15.0",
    "bittensor>=10.2.0",
    "torch>=2.11.0",
    "uvicorn>=0.42",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff",
    "mypy",
    "testcontainers>=4.14.2",
]

[project.scripts]
jarvis-miner = "cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["cli", "miner_tools", "subnets", "workstream"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: tests that require Docker or external runtime dependencies",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.coverage.run]
branch = true
source = ["subnets/sn13", "workstream"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true

[dependency-groups]
dev = [
    "httpx",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff",
    "mypy",
    "testcontainers>=4.14.2",
]
